enhanced functionality for costing

--- a/index.html
+++ b/index.html
@@ -164,10 +164,10 @@
           <!--<h4>ORDER SUMMARY</h4>-->
           <ul class = "collapsible popout" data-collapsible = "accordion">
               <li> <!--SUMMARY-->
-                 <div class = "collapsible-header"><i class="material-icons">local_pizza</i>ORDER SUMMARY</div>
+                 <div id="order_summary" class = "collapsible-header"><i class="material-icons">local_pizza</i>ORDER SUMMARY</div>
                  <div class = "collapsible-body">
                    <div class="container left-align">
-                      <div class="center-align"><label><i>(click icon to remove item)</i></label></div>  
+                      <div class="center-align"><label><i>(click icon to remove item)</i></label></div>
                       <form action="#">
                           <ul class="collection"></ul> <!--list dynamically populated in JS-->
                       </form>
