fixing return vals for meat/veg in index.html

--- a/index.html
+++ b/index.html
@@ -110,17 +110,17 @@
                  <form action="#">
                    <div><label><i>(first included; +$1 additional)</i></label></div>  
                    <p class="center-align">
-                     <input type="checkbox" name="meat" value="p" id="pep" />
+                     <input type="checkbox" name="meat" value="PEPPERONI" id="pep" />
                        <label for="pep">PEPPERONI</label>
-                     <input type="checkbox" name="meat" value="s" id="saus" />
+                     <input type="checkbox" name="meat" value="SAUSAGE" id="saus" />
                        <label for="saus">SAUSAGE</label>
-                     <input type="checkbox" name="meat" value="cb" id="can" />
+                     <input type="checkbox" name="meat" value="CANADIAN BACON" id="can" />
                        <label for="can">CANADIAN BACON</label>
-                     <input type="checkbox" name="meat" value="gb" id="beef" />
-                       <label for="beef">GROUND BEER</label>
-                     <input type="checkbox" name="meat" value="a" id="anch" />
+                     <input type="checkbox" name="meat" value="GROUND BEEF" id="beef" />
+                       <label for="beef">GROUND BEEF</label>
+                     <input type="checkbox" name="meat" value="ANCHOVY" id="anch" />
                        <label for="anch">ANCHOVY</label>
-                     <input type="checkbox" name="meat" value="c" id="chkn" />
+                     <input type="checkbox" name="meat" value="CHICKEN" id="chkn" />
                        <label for="chkn">CHICKEN</label>
                     </p>
                  </form>
@@ -134,21 +134,21 @@
                  <form action="#">
                    <div><label><i>(first included; +$1 additional)</i></label></div>  
                    <p class="center-align">
-                     <input type="checkbox" name="veg" value="gp" id="gpep" />
+                     <input type="checkbox" name="veg" value="GREEN PEPPER" id="gpep" />
                        <label for="gpep">GREEN PEPPER</label>
-                     <input type="checkbox" name="veg" value="t" id="tom" />
+                     <input type="checkbox" name="veg" value="SUN-DRIED TOMATO" id="tom" />
                        <label for="tom">SUN-DRIED TOMATO</label>
-                     <input type="checkbox" name="veg" value="ol" id="ol" />
+                     <input type="checkbox" name="veg" value="BLACK OLIVE" id="ol" />
                        <label for="ol">BLACK OLIVE</label>
-                     <input type="checkbox" name="veg" value="on" id="on" />
+                     <input type="checkbox" name="veg" value="RED ONION" id="on" />
                        <label for="on">RED ONION</label>
-                     <input type="checkbox" name="veg" value="j" id="jalap" />
+                     <input type="checkbox" name="veg" value="JALAPENO" id="jalap" />
                        <label for="jalap">JALAPENO</label>
-                     <input type="checkbox" name="veg" value="m" id="mush" />
+                     <input type="checkbox" name="veg" value="MUSHROOM" id="mush" />
                        <label for="mush">MUSHROOM</label>
-                     <input type="checkbox" name="veg" value="p" id="pine" />
+                     <input type="checkbox" name="veg" value="PINEAPPLE" id="pine" />
                        <label for="pine">PINEAPPLE</label>
-                     <input type="checkbox" name="veg" value="s" id="spnch" />
+                     <input type="checkbox" name="veg" value="SPINACH" id="spnch" />
                        <label for="spnch">SPINACH</label>
                     </p>
                  </form>
