changed file-tree structure

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<title>EMPIRICALLY DELICIOUS</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!--JavaScript ref-->
-    <script type="text/javascript" src="app.js"></script>
+    <script type="text/javascript" src="./javascript/app.js"></script>
     <!--Google Font APIs-->
     <link rel = "stylesheet"
      href = "https://fonts.googleapis.com/icon?family=Material+Icons">
@@ -252,8 +252,8 @@
       </div>
     </div>
 
-    <!--jQuery ref-->
-    <script type="text/javascript" src="modal.js"></script>
+    <!--jQuery ref // needs to be located after modal button is rendered in HTML-->
+    <script type="text/javascript" src="./javascript/modal.js"></script>
         
 </body>
 </html>
